--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Mayenziwe Sibanda</title>
   </head>
   <body>
+    <h1>Hello, Pluralsight!</h1>
+
+    <ul>
+      <li>ES6 Javascript</li>
+      <li>Angular</li>
+    </ul>
 
   </body>
 </html>
